<resources>
    <string name="app_name">MyPetStore</string>
    <string name="title">CityPetStore</string>
    <string name="submission_by_azzarrizky">submission by AzzarRizky</string>

    <string name="store_name">Nama Toko</string>
    <string name="store_address">Jalan / Alamat Toko</string>
    <string name="open_time">09:00 – 01:00</string>
    <string name="phone_number">089999999999</string>
    <string name="share">share</string>
    <string name="Azzar_Rizky">about me</string>
    <string name="about_me">About me</string>
    <string name="my_name">Azzar Rizky</string>
    <string name="my_email">azzar.arza18@gmail.com</string>
    <string name="my_desc">Undergraduate student at Multi Data Palembang University \n Mobile Develompent Cohort at Bangkit Academy 2023 H 2</string>
    <string name="tentang_toko">Tentang Toko</string>

    <!--data petshop-->
    <string-array name="data_title">
        <item>Gupo Petshop Kenten</item>
        <item>Permata Petshop</item>
        <item>Gracia Petshop Palembang</item>
        <item>Oska Mini Petshop</item>
        <item>Mercy Petshop 2 </item>
        <item> Mouzza Petshop 2</item>
        <item>Boboo Petshop</item>
        <item>Mercy PetShop</item>
        <item> Yuni Petshop</item>
        <item>Eleven Petshop</item>
    </string-array>

    <string-array name="data_openTime">
        <item>09:00 – 20:00</item>
        <item>07:00 – 17:00</item>
        <item>08:00 – 18:00</item>
        <item>08:00 – 18:00</item>
        <item>09:00 – 20:00</item>
        <item>09:00 – 20:00</item>
        <item>07:00 – 17:00</item>
        <item>07:00 – 17:00</item>
        <item>07:00 – 17:00</item>
        <item>08:00 – 20:00</item>
    </string-array>

    <string-array name="data_address">
        <item>Samping Apotik Lintang, Jl. MP. Mangkunegara No.6, 8 Ilir, Kec. Ilir Tim. II, Kota Palembang</item>
        <item>Jl. Residen H. Najamuddin No.326, Suka Maju, Kec. Sako, Kota Palembang, Sumatera Selatan</item>
        <item>Jalan Kenten Villa Kencana Damai No.F 16, Suka Maju, Kec. Sako, Kota Palembang, Sumatera Selatan</item>
        <item>Jl. Komp. Kenten City, Suka Maju, Kec. Sako, Kota Palembang, Sumatera Selatan</item>
        <item>Jl. Bougenville 3 No.ac/18, Suka Maju, Kec. Sako, Kab. Banyuasin, Sumatera Selatan</item>
        <item>perumahan kencana damai, Jl. Asoka 3 No.34, Talang Buluh, Kec. Talang Klp., Kab. Banyuasin, Sumatera Selatan</item>
        <item>Jl. Talang Keramat, Talang Buluh, Kec. Talang Klp., Kab. Banyuasin, Sumatera Selatan</item>
        <item>Jl. Tunas Muda No.826, RT.01/RW.001, Suka Maju, Kec. Sako, Kota Palembang, Sumatera Selatan</item>
        <item>Lrg. Tembusan, Sukajaya, Kec. Sukarami, Kota Palembang, Sumatera Selatan</item>
        <item>Jl. Sukabangun II No.503, Sukajaya, Kec. Sukarami, Kota Palembang, Sumatera Selatan</item>
    </string-array>

    <string-array name="data_phoneNumber">
        <item>082184194803</item>
        <item>081178789461</item>
        <item>08117883577</item>
        <item>082177709809</item>
        <item>080000000000</item>
        <item>08989847251</item>
        <item>081367172255</item>
        <item>081279857555</item>
        <item>080000000000</item>
        <item>08117879807</item>
    </string-array>

    <!--The Images i used below was a dummy images that i take from jejakpiknik.com-->
    <string-array name="data_photo">
        <item>https://jejakpiknik.com/wp-content/uploads/2021/07/petshop-terbesar-di-palembang.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/08/petshop-di-pekalongan.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/07/petshop-di-bintaro-sektor-9.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2022/01/jual-kucing-persia-area-purwokerto.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/08/petshop-di-mojokerto.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/08/petshop-di-kudus.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/07/petshop-di-cikarang-utara.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/07/petshop-terlengkap-di-kediri.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/08/petshop-di-purbalingga.jpg</item>
        <item>https://jejakpiknik.com/wp-content/uploads/2021/08/petshop-di-tulungagung.jpg</item>
    </string-array>

    <string-array name="data_description">
        <item>Gupo Petshop merupakan Toko yang menyediakan pangan dan kebutuhan Peliharaan kesayangan anda, Seperti Makanan kucing, makanan anjing, Makanan ikan hias, dan lainnya. Gupo Petshop terdiri dari 3 cabang di kota Palembang, yaitu Gupo PetShop cabang Kenten, Gupo Petshop KM7 dan Gupo Petshop Cabang Sekip. Layanan yang di sediakan oleh Gupo Petshop terdiri dari : Cat Grooming, Dog Grooming, dan Pet Hotels</item>
        <item>Permata Petshop Merupakan toko peliharaan yang menyediakan berbagai perlengkapan dan makanan Peliharaan anda. PetShop ini masih tergolong baru, dan belum memiliki jumlah stock makanan hewan peliharaan yang lengkap, namun anda dapat menemukan beberapa produk yang sering di jumpai pada Petshop lainnya. Permata petshop hanya menyediakan jasa Pet Hotels dan Pet Grooming. </item>
        <item>Gracia Petshop merupakan toko yang menyediakan berbagai kebutuhan untuk binatang peliharaan seperti pakan kucing, pakan anjing, pasir wangi, aksesoris hewan peliharaan, perlengkapan grooming, vitamin, obat-obatan, kandang dan lain sebagainya. Petshop ini hadir memberikan layanan terbaik dan terlengkap dengan harga yang terjangkau.</item>
        <item>Oska Mini Petshop merupakan toko binatang dan peliharaan yang menyediakan makanan serta vitamin untuk kucing dan anjing peliharaan. Petshop ini juga menyediakan jasa Pet Grooming yang bisa di antar dan jemput secara gratis.</item>
        <item>Mercy Petshop 2 merupakan Toko yang menyediakan makanan kucing, pasir kucing, tempat makan/minum, makanan ayam/burung/ikan, aneka kandang, obat-obatan, dan perlengkapan lainnya. Mercy Petshop terdiri dari 2 cabang di kota Palembang, yaitu Mercy PS di Jl. Tunas Muda No.826, RT.01/RW.001, Suka Maju, Kec. Sako, Kota Palembang, Sumatera Selatan 30164, dan Mercy Petshop 2 di Jl. Bougenville 3 No.ac/18, Suka Maju, Kec. Sako, Kab. Banyuasin, Sumatera Selatan 30164.</item>
        <item>Mouzza Petshop 2 merupakan toko peliharaan yang menyediakan berbagai makanan peliharaan dan perlengkapan lainnya seperti mainan, aksesoris, serta obat obatan. Petshop ini juga menyediakan jasa Pet Hotels dan Pet Grooming.</item>
        <item>Boboo Petshop merupakan toko yang menyediakan berbagai perlengkapan dan kebutuhan kucing yang lengkap. Petshop ini juga menyediakan jasa Pet Grooming dan Lion Cut. Boboo Petshop terdiri dari 2 cabang yaitu Boboo Petshop Talang Keramat dan Boboo Petshop Talang Jambe.</item>
        <item>merupakan Toko utama dari cabang Mercy PetShop yang juga menyediakan makanan kucing, pasir kucing, tempat makan/minum, makanan ayam/burung/ikan, aneka kandang, obat-obatan, dan perlengkapan lainnya.</item>
        <item>Yuni Petshop merupakan toko peliharaan yang menyediakan berbagai perlengkapan kucing dan juga kelinci, seperti makanan kucing, shampoo kucing, Makanan kelinci, jual beli kelinci dan kandang setra akesoris lainnya.</item>
        <item>Eleven Petshop merupakan toko peliharaan yang menyediakan berbagai perlengkapan dan kebutuhan peliharaan, seperti makanan kucing, makanan anjing, kandang , cat grass, pasir, dan obat obatan, serta perlengkapan lainnya. Selain itu, Eleven Petshop juga menyediakan jasa Pet Grooming.</item>
    </string-array>

</resources>