<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_about"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/about_me"
            android:textColor="@color/darkGreen" />

        <ImageView
            android:id="@+id/iv_azzar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_about"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_azzar" />

        <TextView
            android:id="@+id/my_name"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_azzar"
            android:layout_centerHorizontal="true"
            android:text="@string/my_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/my_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_name"
            android:layout_centerHorizontal="true"
            android:text="@string/my_desc"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:text="@string/my_email"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </TableRow>


        </TableLayout>

    </RelativeLayout>


</ScrollView>